Fixed styling on one sheet and worked on small changes to make app look more appealing

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,100 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&display=swap');
+
 body {
+  font-size: 18px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgba(197, 197, 197, 0.925);
+}
+
+html, body {
+  font-family: 'Josefin Sans', sans-serif;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h1, h2, button, p, li, ul, img {
+  padding: 0;
+  margin: 0;
+}
+
+body p {
+  padding: 5px 0;
+}
+
+.App {
+  text-align: center;
+}
+
+.App button {
+  border: 2px solid black;
+  font-size: 0.9rem;
+  font-weight: 600;
+  width: 100px;
+  margin: 20px auto;
+  background-color: skyblue;
+  padding: 10px 0;
+}
+
+header h1 {
+  text-transform: uppercase;
+}
+
+.choosePet {
+  display: flex;
+  justify-content: space-around;
+}
+
+.catTeam, .dogTeam {
+display: flex;
+flex-direction: column;
+align-items: center;
+margin-top: 20px;
+}
+
+.catSection,
+.dogSection {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.catSection img,
+.dogSection img {
+  width: 300px;
+  margin-top: 25px;
+}
+
+.animalInfo {
+  width: 400px;
+}
+
+header .specialStyle {
+  color:blue;
+  border-bottom: solid blue 1px;
+}
+
+.catSection label,
+.dogSection label {
+  margin-right: 10px;
+}
+
+.catSection .animalInfo,
+.dogSection .animalInfo {
+  padding-bottom: 20px;
+}
+
+.catSection .animalInfo .capital,
+.dogSection .animalInfo .capital {
+  text-transform: capitalize;
+}
+
+
+
